# total-viewsheds

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benchmarks/: cardiff.json  cardiff_50km_aeqd_100m.bt  run.sh
crates/kernels/vulkan-and-cpu/: Cargo.toml  kernel.spv
crates/kernels/vulkan-and-cpu/src/: constants.rs  kernel.rs  lib.rs  ring_data.rs
crates/shader/: total_viewsheds_kernel.spv
crates/shader/src/: kernel.rs
crates/total-viewsheds/: Cargo.toml
crates/total-viewsheds/src/: band_of_sight.rs  cache.rs  compute.rs  config.rs  dem.rs  dump_usage.rs  gpu.rs  input.rs  main.rs  projection.rs  vulkan.rs
crates/total-viewsheds/src/bt/: header.rs  read.rs  write.rs
crates/total-viewsheds/src/output/: bt.rs  png.rs  ring_data.rs  viewshed.rs
